# MPI_Array

./: CMakeLists.txt  Mpi_array.cpp
